zetasql/parser/testdata/parser_errors_literal_cutoff.test
# Long literals are cut off (single quotes).
# The length of the text is chosen to test edge cases for the limit of 50 bytes.
{{|rb|b|R|BR}}'01234567890123456789012345678901234567890123456{{7|78|789|7890|78901|789012}}'
--
ALTERNATION GROUP: 7
--
ERROR: Syntax error: Unexpected string literal '012345678901234567890123456789012345678901234567' [at 1:1]
'012345678901234567890123456789012345678901234567'
^
--
ALTERNATION GROUP: 78
--
ERROR: Syntax error: Unexpected string literal '0123456789012345678901234567890123456789012345678' [at 1:1]
'0123456789012345678901234567890123456789012345678'
^
--
ALTERNATION GROUP: 789
--
ERROR: Syntax error: Unexpected string literal '01234567890123456789012345678901234567890123456789' [at 1:1]
'01234567890123456789012345678901234567890123456789'
^
--
ALTERNATION GROUP: 7890
--
ERROR: Syntax error: Unexpected string literal '012345678901234567890123456789012345678901234567890' [at 1:1]
'012345678901234567890123456789012345678901234567890'
^
--
ALTERNATION GROUP: 78901
--
ERROR: Syntax error: Unexpected string literal '012345678901234567890123456789012345678901234567...' [at 1:1]
'0123456789012345678901234567890123456789012345678901'
^
--
ALTERNATION GROUP: 789012
--
ERROR: Syntax error: Unexpected string literal '012345678901234567890123456789012345678901234567...' [at 1:1]
'01234567890123456789012345678901234567890123456789012'
^
--
ALTERNATION GROUP: rb,7
--
ERROR: Syntax error: Unexpected bytes literal rb'012345678901234567890123456789012345678901234567' [at 1:1]
rb'012345678901234567890123456789012345678901234567'
^
--
ALTERNATION GROUP: rb,78
--
ERROR: Syntax error: Unexpected bytes literal rb'0123456789012345678901234567890123456789012345678' [at 1:1]
rb'0123456789012345678901234567890123456789012345678'
^
--
ALTERNATION GROUP: rb,789
--
ERROR: Syntax error: Unexpected bytes literal rb'0123456789012345678901234567890123456789012345...' [at 1:1]
rb'01234567890123456789012345678901234567890123456789'
^
--
ALTERNATION GROUP: rb,7890
--
ERROR: Syntax error: Unexpected bytes literal rb'0123456789012345678901234567890123456789012345...' [at 1:1]
rb'012345678901234567890123456789012345678901234567890'
^
--
ALTERNATION GROUP: rb,78901
--
ERROR: Syntax error: Unexpected bytes literal rb'0123456789012345678901234567890123456789012345...' [at 1:1]
rb'0123456789012345678901234567890123456789012345678901'
^
--
ALTERNATION GROUP: rb,789012
--
ERROR: Syntax error: Unexpected bytes literal rb'0123456789012345678901234567890123456789012345...' [at 1:1]
rb'01234567890123456789012345678901234567890123456789012'
^
--
ALTERNATION GROUP: b,7
--
ERROR: Syntax error: Unexpected bytes literal b'012345678901234567890123456789012345678901234567' [at 1:1]
b'012345678901234567890123456789012345678901234567'
^
--
ALTERNATION GROUP: b,78
--
ERROR: Syntax error: Unexpected bytes literal b'0123456789012345678901234567890123456789012345678' [at 1:1]
b'0123456789012345678901234567890123456789012345678'
^
--
ALTERNATION GROUP: b,789
--
ERROR: Syntax error: Unexpected bytes literal b'01234567890123456789012345678901234567890123456789' [at 1:1]
b'01234567890123456789012345678901234567890123456789'
^
--
ALTERNATION GROUP: b,7890
--
ERROR: Syntax error: Unexpected bytes literal b'01234567890123456789012345678901234567890123456...' [at 1:1]
b'012345678901234567890123456789012345678901234567890'
^
--
ALTERNATION GROUP: b,78901
--
ERROR: Syntax error: Unexpected bytes literal b'01234567890123456789012345678901234567890123456...' [at 1:1]
b'0123456789012345678901234567890123456789012345678901'
^
--
ALTERNATION GROUP: b,789012
--
ERROR: Syntax error: Unexpected bytes literal b'01234567890123456789012345678901234567890123456...' [at 1:1]
b'01234567890123456789012345678901234567890123456789012'
^
--
ALTERNATION GROUP: R,7
--
ERROR: Syntax error: Unexpected string literal R'012345678901234567890123456789012345678901234567' [at 1:1]
R'012345678901234567890123456789012345678901234567'
^
--
ALTERNATION GROUP: R,78
--
ERROR: Syntax error: Unexpected string literal R'0123456789012345678901234567890123456789012345678' [at 1:1]
R'0123456789012345678901234567890123456789012345678'
^
--
ALTERNATION GROUP: R,789
--
ERROR: Syntax error: Unexpected string literal R'01234567890123456789012345678901234567890123456789' [at 1:1]
R'01234567890123456789012345678901234567890123456789'
^
--
ALTERNATION GROUP: R,7890
--
ERROR: Syntax error: Unexpected string literal R'01234567890123456789012345678901234567890123456...' [at 1:1]
R'012345678901234567890123456789012345678901234567890'
^
--
ALTERNATION GROUP: R,78901
--
ERROR: Syntax error: Unexpected string literal R'01234567890123456789012345678901234567890123456...' [at 1:1]
R'0123456789012345678901234567890123456789012345678901'
^
--
ALTERNATION GROUP: R,789012
--
ERROR: Syntax error: Unexpected string literal R'01234567890123456789012345678901234567890123456...' [at 1:1]
R'01234567890123456789012345678901234567890123456789012'
^
--
ALTERNATION GROUP: BR,7
--
ERROR: Syntax error: Unexpected bytes literal BR'012345678901234567890123456789012345678901234567' [at 1:1]
BR'012345678901234567890123456789012345678901234567'
^
--
ALTERNATION GROUP: BR,78
--
ERROR: Syntax error: Unexpected bytes literal BR'0123456789012345678901234567890123456789012345678' [at 1:1]
BR'0123456789012345678901234567890123456789012345678'
^
--
ALTERNATION GROUP: BR,789
--
ERROR: Syntax error: Unexpected bytes literal BR'0123456789012345678901234567890123456789012345...' [at 1:1]
BR'01234567890123456789012345678901234567890123456789'
^
--
ALTERNATION GROUP: BR,7890
--
ERROR: Syntax error: Unexpected bytes literal BR'0123456789012345678901234567890123456789012345...' [at 1:1]
BR'012345678901234567890123456789012345678901234567890'
^
--
ALTERNATION GROUP: BR,78901
--
ERROR: Syntax error: Unexpected bytes literal BR'0123456789012345678901234567890123456789012345...' [at 1:1]
BR'0123456789012345678901234567890123456789012345678901'
^
--
ALTERNATION GROUP: BR,789012
--
ERROR: Syntax error: Unexpected bytes literal BR'0123456789012345678901234567890123456789012345...' [at 1:1]
BR'01234567890123456789012345678901234567890123456789012'
^
==

# Long literals are cut off (double quotes).
# The length of the text is chosen to test edge cases for the limit of 50 bytes.
{{|rb|b|R|BR}}"01234567890123456789012345678901234567890123456{{7|78|789|7890|78901|789012}}"
--
ALTERNATION GROUP: 7
--
ERROR: Syntax error: Unexpected string literal "012345678901234567890123456789012345678901234567" [at 1:1]
"012345678901234567890123456789012345678901234567"
^
--
ALTERNATION GROUP: 78
--
ERROR: Syntax error: Unexpected string literal "0123456789012345678901234567890123456789012345678" [at 1:1]
"0123456789012345678901234567890123456789012345678"
^
--
ALTERNATION GROUP: 789
--
ERROR: Syntax error: Unexpected string literal "01234567890123456789012345678901234567890123456789" [at 1:1]
"01234567890123456789012345678901234567890123456789"
^
--
ALTERNATION GROUP: 7890
--
ERROR: Syntax error: Unexpected string literal "012345678901234567890123456789012345678901234567890" [at 1:1]
"012345678901234567890123456789012345678901234567890"
^
--
ALTERNATION GROUP: 78901
--
ERROR: Syntax error: Unexpected string literal "012345678901234567890123456789012345678901234567..." [at 1:1]
"0123456789012345678901234567890123456789012345678901"
^
--
ALTERNATION GROUP: 789012
--
ERROR: Syntax error: Unexpected string literal "012345678901234567890123456789012345678901234567..." [at 1:1]
"01234567890123456789012345678901234567890123456789012"
^
--
ALTERNATION GROUP: rb,7
--
ERROR: Syntax error: Unexpected bytes literal rb"012345678901234567890123456789012345678901234567" [at 1:1]
rb"012345678901234567890123456789012345678901234567"
^
--
ALTERNATION GROUP: rb,78
--
ERROR: Syntax error: Unexpected bytes literal rb"0123456789012345678901234567890123456789012345678" [at 1:1]
rb"0123456789012345678901234567890123456789012345678"
^
--
ALTERNATION GROUP: rb,789
--
ERROR: Syntax error: Unexpected bytes literal rb"0123456789012345678901234567890123456789012345..." [at 1:1]
rb"01234567890123456789012345678901234567890123456789"
^
--
ALTERNATION GROUP: rb,7890
--
ERROR: Syntax error: Unexpected bytes literal rb"0123456789012345678901234567890123456789012345..." [at 1:1]
rb"012345678901234567890123456789012345678901234567890"
^
--
ALTERNATION GROUP: rb,78901
--
ERROR: Syntax error: Unexpected bytes literal rb"0123456789012345678901234567890123456789012345..." [at 1:1]
rb"0123456789012345678901234567890123456789012345678901"
^
--
ALTERNATION GROUP: rb,789012
--
ERROR: Syntax error: Unexpected bytes literal rb"0123456789012345678901234567890123456789012345..." [at 1:1]
rb"01234567890123456789012345678901234567890123456789012"
^
--
ALTERNATION GROUP: b,7
--
ERROR: Syntax error: Unexpected bytes literal b"012345678901234567890123456789012345678901234567" [at 1:1]
b"012345678901234567890123456789012345678901234567"
^
--
ALTERNATION GROUP: b,78
--
ERROR: Syntax error: Unexpected bytes literal b"0123456789012345678901234567890123456789012345678" [at 1:1]
b"0123456789012345678901234567890123456789012345678"
^
--
ALTERNATION GROUP: b,789
--
ERROR: Syntax error: Unexpected bytes literal b"01234567890123456789012345678901234567890123456789" [at 1:1]
b"01234567890123456789012345678901234567890123456789"
^
--
ALTERNATION GROUP: b,7890
--
ERROR: Syntax error: Unexpected bytes literal b"01234567890123456789012345678901234567890123456..." [at 1:1]
b"012345678901234567890123456789012345678901234567890"
^
--
ALTERNATION GROUP: b,78901
--
ERROR: Syntax error: Unexpected bytes literal b"01234567890123456789012345678901234567890123456..." [at 1:1]
b"0123456789012345678901234567890123456789012345678901"
^
--
ALTERNATION GROUP: b,789012
--
ERROR: Syntax error: Unexpected bytes literal b"01234567890123456789012345678901234567890123456..." [at 1:1]
b"01234567890123456789012345678901234567890123456789012"
^
--
ALTERNATION GROUP: R,7
--
ERROR: Syntax error: Unexpected string literal R"012345678901234567890123456789012345678901234567" [at 1:1]
R"012345678901234567890123456789012345678901234567"
^
--
ALTERNATION GROUP: R,78
--
ERROR: Syntax error: Unexpected string literal R"0123456789012345678901234567890123456789012345678" [at 1:1]
R"0123456789012345678901234567890123456789012345678"
^
--
ALTERNATION GROUP: R,789
--
ERROR: Syntax error: Unexpected string literal R"01234567890123456789012345678901234567890123456789" [at 1:1]
R"01234567890123456789012345678901234567890123456789"
^
--
ALTERNATION GROUP: R,7890
--
ERROR: Syntax error: Unexpected string literal R"01234567890123456789012345678901234567890123456..." [at 1:1]
R"012345678901234567890123456789012345678901234567890"
^
--
ALTERNATION GROUP: R,78901
--
ERROR: Syntax error: Unexpected string literal R"01234567890123456789012345678901234567890123456..." [at 1:1]
R"0123456789012345678901234567890123456789012345678901"
^
--
ALTERNATION GROUP: R,789012
--
ERROR: Syntax error: Unexpected string literal R"01234567890123456789012345678901234567890123456..." [at 1:1]
R"01234567890123456789012345678901234567890123456789012"
^
--
ALTERNATION GROUP: BR,7
--
ERROR: Syntax error: Unexpected bytes literal BR"012345678901234567890123456789012345678901234567" [at 1:1]
BR"012345678901234567890123456789012345678901234567"
^
--
ALTERNATION GROUP: BR,78
--
ERROR: Syntax error: Unexpected bytes literal BR"0123456789012345678901234567890123456789012345678" [at 1:1]
BR"0123456789012345678901234567890123456789012345678"
^
--
ALTERNATION GROUP: BR,789
--
ERROR: Syntax error: Unexpected bytes literal BR"0123456789012345678901234567890123456789012345..." [at 1:1]
BR"01234567890123456789012345678901234567890123456789"
^
--
ALTERNATION GROUP: BR,7890
--
ERROR: Syntax error: Unexpected bytes literal BR"0123456789012345678901234567890123456789012345..." [at 1:1]
BR"012345678901234567890123456789012345678901234567890"
^
--
ALTERNATION GROUP: BR,78901
--
ERROR: Syntax error: Unexpected bytes literal BR"0123456789012345678901234567890123456789012345..." [at 1:1]
BR"0123456789012345678901234567890123456789012345678901"
^
--
ALTERNATION GROUP: BR,789012
--
ERROR: Syntax error: Unexpected bytes literal BR"0123456789012345678901234567890123456789012345..." [at 1:1]
BR"01234567890123456789012345678901234567890123456789012"
^
==

# Long literals are cut off (triple single quotes).
# The length of the text is chosen to test edge cases for the limit of 50 bytes.
{{|rb|b|R|BR}}'''0123456789012345678901234567890123456789012{{3|34|345|3456|34567|345678}}'''
--
ALTERNATION GROUP: 3
--
ERROR: Syntax error: Unexpected string literal '''01234567890123456789012345678901234567890123''' [at 1:1]
'''01234567890123456789012345678901234567890123'''
^
--
ALTERNATION GROUP: 34
--
ERROR: Syntax error: Unexpected string literal '''012345678901234567890123456789012345678901234''' [at 1:1]
'''012345678901234567890123456789012345678901234'''
^
--
ALTERNATION GROUP: 345
--
ERROR: Syntax error: Unexpected string literal '''0123456789012345678901234567890123456789012345''' [at 1:1]
'''0123456789012345678901234567890123456789012345'''
^
--
ALTERNATION GROUP: 3456
--
ERROR: Syntax error: Unexpected string literal '''01234567890123456789012345678901234567890123456''' [at 1:1]
'''01234567890123456789012345678901234567890123456'''
^
--
ALTERNATION GROUP: 34567
--
ERROR: Syntax error: Unexpected string literal '''01234567890123456789012345678901234567890123...''' [at 1:1]
'''012345678901234567890123456789012345678901234567'''
^
--
ALTERNATION GROUP: 345678
--
ERROR: Syntax error: Unexpected string literal '''01234567890123456789012345678901234567890123...''' [at 1:1]
'''0123456789012345678901234567890123456789012345678'''
^
--
ALTERNATION GROUP: rb,3
--
ERROR: Syntax error: Unexpected bytes literal rb'''01234567890123456789012345678901234567890123''' [at 1:1]
rb'''01234567890123456789012345678901234567890123'''
^
--
ALTERNATION GROUP: rb,34
--
ERROR: Syntax error: Unexpected bytes literal rb'''012345678901234567890123456789012345678901234''' [at 1:1]
rb'''012345678901234567890123456789012345678901234'''
^
--
ALTERNATION GROUP: rb,345
--
ERROR: Syntax error: Unexpected bytes literal rb'''012345678901234567890123456789012345678901...''' [at 1:1]
rb'''0123456789012345678901234567890123456789012345'''
^
--
ALTERNATION GROUP: rb,3456
--
ERROR: Syntax error: Unexpected bytes literal rb'''012345678901234567890123456789012345678901...''' [at 1:1]
rb'''01234567890123456789012345678901234567890123456'''
^
--
ALTERNATION GROUP: rb,34567
--
ERROR: Syntax error: Unexpected bytes literal rb'''012345678901234567890123456789012345678901...''' [at 1:1]
rb'''012345678901234567890123456789012345678901234567'''
^
--
ALTERNATION GROUP: rb,345678
--
ERROR: Syntax error: Unexpected bytes literal rb'''012345678901234567890123456789012345678901...''' [at 1:1]
rb'''0123456789012345678901234567890123456789012345678'''
^
--
ALTERNATION GROUP: b,3
--
ERROR: Syntax error: Unexpected bytes literal b'''01234567890123456789012345678901234567890123''' [at 1:1]
b'''01234567890123456789012345678901234567890123'''
^
--
ALTERNATION GROUP: b,34
--
ERROR: Syntax error: Unexpected bytes literal b'''012345678901234567890123456789012345678901234''' [at 1:1]
b'''012345678901234567890123456789012345678901234'''
^
--
ALTERNATION GROUP: b,345
--
ERROR: Syntax error: Unexpected bytes literal b'''0123456789012345678901234567890123456789012345''' [at 1:1]
b'''0123456789012345678901234567890123456789012345'''
^
--
ALTERNATION GROUP: b,3456
--
ERROR: Syntax error: Unexpected bytes literal b'''0123456789012345678901234567890123456789012...''' [at 1:1]
b'''01234567890123456789012345678901234567890123456'''
^
--
ALTERNATION GROUP: b,34567
--
ERROR: Syntax error: Unexpected bytes literal b'''0123456789012345678901234567890123456789012...''' [at 1:1]
b'''012345678901234567890123456789012345678901234567'''
^
--
ALTERNATION GROUP: b,345678
--
ERROR: Syntax error: Unexpected bytes literal b'''0123456789012345678901234567890123456789012...''' [at 1:1]
b'''0123456789012345678901234567890123456789012345678'''
^
--
ALTERNATION GROUP: R,3
--
ERROR: Syntax error: Unexpected string literal R'''01234567890123456789012345678901234567890123''' [at 1:1]
R'''01234567890123456789012345678901234567890123'''
^
--
ALTERNATION GROUP: R,34
--
ERROR: Syntax error: Unexpected string literal R'''012345678901234567890123456789012345678901234''' [at 1:1]
R'''012345678901234567890123456789012345678901234'''
^
--
ALTERNATION GROUP: R,345
--
ERROR: Syntax error: Unexpected string literal R'''0123456789012345678901234567890123456789012345''' [at 1:1]
R'''0123456789012345678901234567890123456789012345'''
^
--
ALTERNATION GROUP: R,3456
--
ERROR: Syntax error: Unexpected string literal R'''0123456789012345678901234567890123456789012...''' [at 1:1]
R'''01234567890123456789012345678901234567890123456'''
^
--
ALTERNATION GROUP: R,34567
--
ERROR: Syntax error: Unexpected string literal R'''0123456789012345678901234567890123456789012...''' [at 1:1]
R'''012345678901234567890123456789012345678901234567'''
^
--
ALTERNATION GROUP: R,345678
--
ERROR: Syntax error: Unexpected string literal R'''0123456789012345678901234567890123456789012...''' [at 1:1]
R'''0123456789012345678901234567890123456789012345678'''
^
--
ALTERNATION GROUP: BR,3
--
ERROR: Syntax error: Unexpected bytes literal BR'''01234567890123456789012345678901234567890123''' [at 1:1]
BR'''01234567890123456789012345678901234567890123'''
^
--
ALTERNATION GROUP: BR,34
--
ERROR: Syntax error: Unexpected bytes literal BR'''012345678901234567890123456789012345678901234''' [at 1:1]
BR'''012345678901234567890123456789012345678901234'''
^
--
ALTERNATION GROUP: BR,345
--
ERROR: Syntax error: Unexpected bytes literal BR'''012345678901234567890123456789012345678901...''' [at 1:1]
BR'''0123456789012345678901234567890123456789012345'''
^
--
ALTERNATION GROUP: BR,3456
--
ERROR: Syntax error: Unexpected bytes literal BR'''012345678901234567890123456789012345678901...''' [at 1:1]
BR'''01234567890123456789012345678901234567890123456'''
^
--
ALTERNATION GROUP: BR,34567
--
ERROR: Syntax error: Unexpected bytes literal BR'''012345678901234567890123456789012345678901...''' [at 1:1]
BR'''012345678901234567890123456789012345678901234567'''
^
--
ALTERNATION GROUP: BR,345678
--
ERROR: Syntax error: Unexpected bytes literal BR'''012345678901234567890123456789012345678901...''' [at 1:1]
BR'''0123456789012345678901234567890123456789012345678'''
^
==

# Long literals are cut off (triple double quotes).
# The length of the text is chosen to test edge cases for the limit of 50 bytes.
{{|rb|b|R|BR}}"""0123456789012345678901234567890123456789012{{3|34|345|3456|34567|345678}}"""
--
ALTERNATION GROUP: 3
--
ERROR: Syntax error: Unexpected string literal """01234567890123456789012345678901234567890123""" [at 1:1]
"""01234567890123456789012345678901234567890123"""
^
--
ALTERNATION GROUP: 34
--
ERROR: Syntax error: Unexpected string literal """012345678901234567890123456789012345678901234""" [at 1:1]
"""012345678901234567890123456789012345678901234"""
^
--
ALTERNATION GROUP: 345
--
ERROR: Syntax error: Unexpected string literal """0123456789012345678901234567890123456789012345""" [at 1:1]
"""0123456789012345678901234567890123456789012345"""
^
--
ALTERNATION GROUP: 3456
--
ERROR: Syntax error: Unexpected string literal """01234567890123456789012345678901234567890123456""" [at 1:1]
"""01234567890123456789012345678901234567890123456"""
^
--
ALTERNATION GROUP: 34567
--
ERROR: Syntax error: Unexpected string literal """01234567890123456789012345678901234567890123...""" [at 1:1]
"""012345678901234567890123456789012345678901234567"""
^
--
ALTERNATION GROUP: 345678
--
ERROR: Syntax error: Unexpected string literal """01234567890123456789012345678901234567890123...""" [at 1:1]
"""0123456789012345678901234567890123456789012345678"""
^
--
ALTERNATION GROUP: rb,3
--
ERROR: Syntax error: Unexpected bytes literal rb"""01234567890123456789012345678901234567890123""" [at 1:1]
rb"""01234567890123456789012345678901234567890123"""
^
--
ALTERNATION GROUP: rb,34
--
ERROR: Syntax error: Unexpected bytes literal rb"""012345678901234567890123456789012345678901234""" [at 1:1]
rb"""012345678901234567890123456789012345678901234"""
^
--
ALTERNATION GROUP: rb,345
--
ERROR: Syntax error: Unexpected bytes literal rb"""012345678901234567890123456789012345678901...""" [at 1:1]
rb"""0123456789012345678901234567890123456789012345"""
^
--
ALTERNATION GROUP: rb,3456
--
ERROR: Syntax error: Unexpected bytes literal rb"""012345678901234567890123456789012345678901...""" [at 1:1]
rb"""01234567890123456789012345678901234567890123456"""
^
--
ALTERNATION GROUP: rb,34567
--
ERROR: Syntax error: Unexpected bytes literal rb"""012345678901234567890123456789012345678901...""" [at 1:1]
rb"""012345678901234567890123456789012345678901234567"""
^
--
ALTERNATION GROUP: rb,345678
--
ERROR: Syntax error: Unexpected bytes literal rb"""012345678901234567890123456789012345678901...""" [at 1:1]
rb"""0123456789012345678901234567890123456789012345678"""
^
--
ALTERNATION GROUP: b,3
--
ERROR: Syntax error: Unexpected bytes literal b"""01234567890123456789012345678901234567890123""" [at 1:1]
b"""01234567890123456789012345678901234567890123"""
^
--
ALTERNATION GROUP: b,34
--
ERROR: Syntax error: Unexpected bytes literal b"""012345678901234567890123456789012345678901234""" [at 1:1]
b"""012345678901234567890123456789012345678901234"""
^
--
ALTERNATION GROUP: b,345
--
ERROR: Syntax error: Unexpected bytes literal b"""0123456789012345678901234567890123456789012345""" [at 1:1]
b"""0123456789012345678901234567890123456789012345"""
^
--
ALTERNATION GROUP: b,3456
--
ERROR: Syntax error: Unexpected bytes literal b"""0123456789012345678901234567890123456789012...""" [at 1:1]
b"""01234567890123456789012345678901234567890123456"""
^
--
ALTERNATION GROUP: b,34567
--
ERROR: Syntax error: Unexpected bytes literal b"""0123456789012345678901234567890123456789012...""" [at 1:1]
b"""012345678901234567890123456789012345678901234567"""
^
--
ALTERNATION GROUP: b,345678
--
ERROR: Syntax error: Unexpected bytes literal b"""0123456789012345678901234567890123456789012...""" [at 1:1]
b"""0123456789012345678901234567890123456789012345678"""
^
--
ALTERNATION GROUP: R,3
--
ERROR: Syntax error: Unexpected string literal R"""01234567890123456789012345678901234567890123""" [at 1:1]
R"""01234567890123456789012345678901234567890123"""
^
--
ALTERNATION GROUP: R,34
--
ERROR: Syntax error: Unexpected string literal R"""012345678901234567890123456789012345678901234""" [at 1:1]
R"""012345678901234567890123456789012345678901234"""
^
--
ALTERNATION GROUP: R,345
--
ERROR: Syntax error: Unexpected string literal R"""0123456789012345678901234567890123456789012345""" [at 1:1]
R"""0123456789012345678901234567890123456789012345"""
^
--
ALTERNATION GROUP: R,3456
--
ERROR: Syntax error: Unexpected string literal R"""0123456789012345678901234567890123456789012...""" [at 1:1]
R"""01234567890123456789012345678901234567890123456"""
^
--
ALTERNATION GROUP: R,34567
--
ERROR: Syntax error: Unexpected string literal R"""0123456789012345678901234567890123456789012...""" [at 1:1]
R"""012345678901234567890123456789012345678901234567"""
^
--
ALTERNATION GROUP: R,345678
--
ERROR: Syntax error: Unexpected string literal R"""0123456789012345678901234567890123456789012...""" [at 1:1]
R"""0123456789012345678901234567890123456789012345678"""
^
--
ALTERNATION GROUP: BR,3
--
ERROR: Syntax error: Unexpected bytes literal BR"""01234567890123456789012345678901234567890123""" [at 1:1]
BR"""01234567890123456789012345678901234567890123"""
^
--
ALTERNATION GROUP: BR,34
--
ERROR: Syntax error: Unexpected bytes literal BR"""012345678901234567890123456789012345678901234""" [at 1:1]
BR"""012345678901234567890123456789012345678901234"""
^
--
ALTERNATION GROUP: BR,345
--
ERROR: Syntax error: Unexpected bytes literal BR"""012345678901234567890123456789012345678901...""" [at 1:1]
BR"""0123456789012345678901234567890123456789012345"""
^
--
ALTERNATION GROUP: BR,3456
--
ERROR: Syntax error: Unexpected bytes literal BR"""012345678901234567890123456789012345678901...""" [at 1:1]
BR"""01234567890123456789012345678901234567890123456"""
^
--
ALTERNATION GROUP: BR,34567
--
ERROR: Syntax error: Unexpected bytes literal BR"""012345678901234567890123456789012345678901...""" [at 1:1]
BR"""012345678901234567890123456789012345678901234567"""
^
--
ALTERNATION GROUP: BR,345678
--
ERROR: Syntax error: Unexpected bytes literal BR"""012345678901234567890123456789012345678901...""" [at 1:1]
BR"""0123456789012345678901234567890123456789012345678"""
^
==

# Long literals cutoffs are applied to multiline literals as well.
{{r|rb}}"""01234567890123456789
12345678901234567890123456789"""
--
ALTERNATION GROUP: r
--
[NEWLINE \n]
ERROR: Syntax error: Unexpected string literal r"""01234567890123456789\n123456789012345678901...""" [at 1:1]
r"""01234567890123456789
^
--
[NEWLINE \r]
ERROR: Syntax error: Unexpected string literal r"""01234567890123456789\r123456789012345678901...""" [at 1:1]
r"""01234567890123456789
^
--
[NEWLINE \r\n]
ERROR: Syntax error: Unexpected string literal r"""01234567890123456789\r\n1234567890123456789...""" [at 1:1]
r"""01234567890123456789
^
--
ALTERNATION GROUP: rb
--
[NEWLINE \n]
ERROR: Syntax error: Unexpected bytes literal rb"""01234567890123456789\n12345678901234567890...""" [at 1:1]
rb"""01234567890123456789
^
--
[NEWLINE \r]
ERROR: Syntax error: Unexpected bytes literal rb"""01234567890123456789\r12345678901234567890...""" [at 1:1]
rb"""01234567890123456789
^
--
[NEWLINE \r\n]
ERROR: Syntax error: Unexpected bytes literal rb"""01234567890123456789\r\n123456789012345678...""" [at 1:1]
rb"""01234567890123456789
^
==

# Long literals are not cut off in the middle of a unicode character.
"012345678901234567890123456789{{0|00}}123456789012ᗊᗊᗊᗊᗊᗊᗊ"
--
ALTERNATION GROUP: 0
--
ERROR: Syntax error: Unexpected string literal "0123456789012345678901234567890123456789012ᗊ..." [at 1:1]
"0123456789012345678901234567890123456789012ᗊᗊᗊᗊᗊᗊᗊ"
^
--
ALTERNATION GROUP: 00
--
ERROR: Syntax error: Unexpected string literal "01234567890123456789012345678900123456789012ᗊ..." [at 1:1]
"01234567890123456789012345678900123456789012ᗊᗊᗊᗊᗊᗊᗊ"
^
